--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^2.4.3",
     "chai": "^4.3.10",
     "chai-http": "^4.4.0",
+    "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
     "express": "^4.18.2",
